--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
     <!-- header -->
-    <include src=""></include>
+    <include src="./partials/header.html"></include>
     <main>
       <include src=""></include>
       <include src=""></include>
@@ -19,6 +17,6 @@
       <include src=""></include>
     </main>
     <!-- footer -->
-      <include src=""></include>
+    <include src=""></include>
   </body>
 </html>
