--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
     <include src="./partials/header.html"></include>
     <main>
-      <include src=""></include>
+      <include src="./partials/hero.html"></include>
       <include src=""></include>
       <include src=""></include>
       <include src=""></include>
