--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
       <include src=""></include>
     </main>
     <!-- footer -->
-    <include src=""></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
