--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,6 @@
     </main>
     <!-- footer -->
     <include src="./partials/footer.html"></include>
+    <include src="./partials/form.html"></include>
   </body>
 </html>
