add section team

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/hero.html"></include>
-      <include src=""></include>
+      <include src="./partials/team.html"></include>
       <include src=""></include>
       <include src=""></include>
     </main>
