--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       <include src="./partials/team.html"></include>
       <include src="./partials/sviper.html"></include>
       <include src="./partials/coverflov.html"></include>
+      <include src="./partials/cube.html"></include>
     </main>
     <!-- footer -->
     <include src="./partials/footer.html"></include>
@@ -48,7 +49,7 @@
         },
       });
     </script> -->
-    <script>
+    <!-- <script>
       var swiper = new Swiper('.mySwiper', {
         effect: 'coverflow',
         grabCursor: true,
@@ -63,6 +64,23 @@
         },
         pagination: {
           el: '.swiper-pagination',
+        },
+      });
+    </script> -->
+      <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        effect: "cube",
+        loop: true,
+        grabCursor: true,
+        cubeEffect: {
+          shadow: true,
+          slideShadows: true,
+          shadowOffset: 20,
+          shadowScale: 0.94,
+        },
+        pagination: {
+          el: ".swiper-pagination",
         },
       });
     </script>
